clippy_output4.txt
    Checking rollball-grafeo v0.1.0 (F:\work\tranxon\rollball-ai\core\rollball-grafeo)
    Checking rollball-gateway v0.1.0 (F:\work\tranxon\rollball-ai\core\rollball-gateway)
    Checking rollball-runtime v0.1.0 (F:\work\tranxon\rollball-ai\core\rollball-runtime)
error[E0425]: cannot find value `state` in this scope
   --> rollball-gateway\tests\s4_publish_e2e.rs:465:5
    |
456 |     let _state: SharedState = Arc::new(RwLock::new(GatewayState::new(&temp.join("state").to_string_lossy())));
    |         ------ `_state` defined here
...
465 |     state.write().await.add_installed(AgentInfo {
    |     ^^^^^
    |
help: the leading underscore in `_state` marks it as unused, consider renaming it to `state`
    |
456 -     let _state: SharedState = Arc::new(RwLock::new(GatewayState::new(&temp.join("state").to_string_lossy())));
456 +     let state: SharedState = Arc::new(RwLock::new(GatewayState::new(&temp.join("state").to_string_lossy())));
    |

For more information about this error, try `rustc --explain E0425`.
error: could not compile `rollball-gateway` (test "s4_publish_e2e") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: function call inside of `expect`
  --> rollball-runtime\tests\llm_integration.rs:77:41
   |
77 |               serde_json::to_value(&spec).expect(&format!(
   |  _________________________________________^
78 | |                 "Failed to serialize ToolSpec for '{}'",
79 | |                 spec.name
80 | |             ))
   | |______________^
   |
   = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.95.0/index.html#expect_fun_call
   = note: `-D clippy::expect-fun-call` implied by `-D warnings`
   = help: to override `-D warnings` add `#[allow(clippy::expect_fun_call)]`
help: try
   |
77 ~             serde_json::to_value(&spec).unwrap_or_else(|_| panic!("Failed to serialize ToolSpec for '{}'",
78 +                 spec.name))
   |

error: the borrowed expression implements the required traits
   --> rollball-runtime\tests\llm_integration.rs:128:39
    |
128 |         .map(|t| serde_json::to_value(&t.spec()).unwrap())
    |                                       ^^^^^^^^^ help: change this to: `t.spec()`
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.95.0/index.html#needless_borrows_for_generic_args
    = note: `-D clippy::needless-borrows-for-generic-args` implied by `-D warnings`
    = help: to override `-D warnings` add `#[allow(clippy::needless_borrows_for_generic_args)]`

error: could not compile `rollball-runtime` (test "llm_integration") due to 2 previous errors
error: function call inside of `expect`
   --> rollball-runtime\tests\tool_call_stress.rs:312:18
    |
312 |                 .expect(&format!("Serialize failed for '{}' round {}", spec.name, round));
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: try: `unwrap_or_else(|_| panic!("Serialize failed for '{}' round {}", spec.name, round))`
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.95.0/index.html#expect_fun_call
    = note: `-D clippy::expect-fun-call` implied by `-D warnings`
    = help: to override `-D warnings` add `#[allow(clippy::expect_fun_call)]`

error: function call inside of `expect`
   --> rollball-runtime\tests\tool_call_stress.rs:316:18
    |
316 |                 .expect(&format!("Deserialize failed for '{}' round {}", spec.name, round));
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: try: `unwrap_or_else(|_| panic!("Deserialize failed for '{}' round {}", spec.name, round))`
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.95.0/index.html#expect_fun_call

error: this `map_or` can be simplified
   --> rollball-runtime\tests\history_recovery_e2e.rs:376:13
    |
376 |             tr.tool_call_id.as_ref().map_or(false, |id| id == "tc_bad_args"),
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.95.0/index.html#unnecessary_map_or
    = note: `-D clippy::unnecessary-map-or` implied by `-D warnings`
    = help: to override `-D warnings` add `#[allow(clippy::unnecessary_map_or)]`
help: use `is_some_and` instead
    |
376 -             tr.tool_call_id.as_ref().map_or(false, |id| id == "tc_bad_args"),
376 +             tr.tool_call_id.as_ref().is_some_and(|id| id == "tc_bad_args"),
    |

error: could not compile `rollball-runtime` (test "tool_call_stress") due to 2 previous errors
error: the borrowed expression implements the required traits
   --> rollball-runtime\tests\history_recovery_e2e.rs:620:39
    |
620 |         .map(|t| serde_json::to_value(&t.spec()).unwrap())
    |                                       ^^^^^^^^^ help: change this to: `t.spec()`
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.95.0/index.html#needless_borrows_for_generic_args
    = note: `-D clippy::needless-borrows-for-generic-args` implied by `-D warnings`
    = help: to override `-D warnings` add `#[allow(clippy::needless_borrows_for_generic_args)]`

error: could not compile `rollball-runtime` (test "history_recovery_e2e") due to 2 previous errors
error: function call inside of `expect`
   --> rollball-runtime\tests\tool_call_e2e.rs:138:14
    |
138 |             .expect(&format!("Failed to serialize ToolSpec for '{}'", spec.name));
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: try: `unwrap_or_else(|_| panic!("Failed to serialize ToolSpec for '{}'", spec.name))`
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.95.0/index.html#expect_fun_call
    = note: `-D clippy::expect-fun-call` implied by `-D warnings`
    = help: to override `-D warnings` add `#[allow(clippy::expect_fun_call)]`

error: useless use of `format!`
   --> rollball-runtime\tests\tool_call_e2e.rs:217:10
    |
217 |         &format!(r#"{{"path": "test.txt"}}"#),
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: consider using `.to_string()`: `r#"{"path": "test.txt"}"#.to_string()`
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.95.0/index.html#useless_format
    = note: `-D clippy::useless-format` implied by `-D warnings`
    = help: to override `-D warnings` add `#[allow(clippy::useless_format)]`

error: the borrowed expression implements the required traits
    --> rollball-runtime\tests\tool_call_e2e.rs:1156:39
     |
1156 |         .map(|t| serde_json::to_value(&t.spec()).unwrap())
     |                                       ^^^^^^^^^ help: change this to: `t.spec()`
     |
     = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.95.0/index.html#needless_borrows_for_generic_args
     = note: `-D clippy::needless-borrows-for-generic-args` implied by `-D warnings`
     = help: to override `-D warnings` add `#[allow(clippy::needless_borrows_for_generic_args)]`

error: could not compile `rollball-runtime` (test "tool_call_e2e") due to 3 previous errors
